--- a/main.css
+++ b/main.css
@@ -35,10 +35,24 @@ html {
 }
 
 #navbar ul li a:hover {
-    background: #ff6347;
+    background: #BA240A;
     border-radius: 4px;
 }
 
+.heading-small-sheyzam{
+    font-size: 1.7rem;
+    color: #fff;
+    animation: pulsate 0.11s ease-in-out infinite alternate;
+    text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px #c40d25,
+      0 0 82px #c40d25,
+      0 0 92px #c40d25,
+      0 0 102px #c40d25,
+      0 0 151px rgb(131, 9, 19);
+}
 
 /* HOME SECTION*/
 
@@ -49,17 +63,19 @@ html {
     align-items: center;
     padding: 2rem;
     border-bottom: 1px solid black;
-    background-image: url("./Images/deneme2.jpg");
+    background: linear-gradient(rgba(11,11,11,.7), rgba(11,11,11,.7)), url("./Images/fire_background_color_abstraction_66981_1920x1200.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 #home img {
-    max-width: 20%;
+    max-width: 14%;
     height: auto;
     border-radius: 100%;
 }
 
 #home .name h2 {
-    margin-top: 2rem;
+    margin-top: 1rem;
     color: white;
 }
 
@@ -183,4 +199,35 @@ html {
 
 #contact .contact-form ul a:hover {
     opacity: 0.8;
+}
+
+@keyframes pulsate {
+    
+    100% {
+  
+        text-shadow:
+        0 0 4px #fff,
+        0 0 11px #fff,
+        0 0 19px #fff,
+        0 0 40px #c40d25,
+        0 0 80px #c40d25,
+        0 0 90px #c40d25,
+        0 0 100px #c40d25,
+        0 0 150px #c40d25,
+    
+    }
+    
+    0% {
+  
+      text-shadow:
+      0 0 4px #fff,
+      0 0 10px #fff,
+      0 0 18px #fff,
+      0 0 38px #c40d25,
+      0 0 73px #c40d25,
+      0 0 80px #c40d25,
+      0 0 94px #c40d25,
+      0 0 140px #c40d25,
+  
+  }
 }
